Thu Oct 23 20:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* src/QGaimPrefsDialog.cpp:
	  - Modifying the buddy list prefs now actually updates the buddy list.

Thu Oct 23 20:30:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Shorten the number of visible lines in the text entry to 3.

Thu Oct 23 19:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The Join Chat button should now work even when a node isn't
	    selected.

Thu Oct 23 19:31:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a pref name.

Thu Oct 23 19:30:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimMainWindow.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added buddy list prefs. Not all work yet.

Wed Oct 22 23:34:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - The accounts window's listview resizes a bit nicer on larger
	    resolutions now.

Wed Oct 22 22:58:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimMainWindow.cpp:
	  - Closing the window on a conversation no longer closes Gaim.

Wed Oct 22 22:45:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Default to the Buddy List preference page when entering the
	    Preferences dialog.

Wed Oct 22 22:41:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* src/QGaimRequest.cpp:
	* src/main.cpp:
	  - Removed the QGaim class, and added QGaimMainWindow. This cleans up