@@ -1,3 +1,8 @@
+Thu Oct 23 20:54:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - Added support for showing group numbers in the buddy list.
+
 Thu Oct 23 20:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
